--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   z-index: 10;
   width: 100%;
   height: 100%;
+  background-color:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
 }
 
 .alert {
