--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@
   z-index: 10;
   width: 100%;
   height: 100%;
-  background-color:red;
+  background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 7%, rgba(127,134,255,1) 29%, rgba(98,252,70,1) 82%, rgba(106,88,218,1) 100%);
 }
 
 .alert {
